Fix duplicate classes and auth conflicts from rebase